--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "js-yaml": "^3.13.1",
+    "lodash": "^4.17.19",
     "mem": "^4.0.0",
     "serialize-javascript": "^2.1.1"
   },
