--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.19",
     "mem": "^4.0.0",
+    "node-forge": "^0.10.0",
     "serialize-javascript": "^3.1.0"
   },
   "devDependencies": {
